<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/labelNaziv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textColor="#6e6e6e"
            android:textSize="14sp"
            android:text="@string/labelNaziv" />

        <EditText
            android:id="@+id/naziv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="5dp"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/labelTip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:textColor="#6e6e6e"
            android:textSize="14sp"
            android:text="@string/labelTip" />
        <Spinner
            android:id="@+id/tip_fAlert"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="5dp"
            android:entries="@array/tip_fAlert" />

        <TextView
            android:id="@+id/labelRok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:textColor="#6e6e6e"
            android:textSize="14sp"
            android:text="@string/labelRok" />

        <EditText
            android:id="@+id/rok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="5dp"
            android:textSize="16sp"
            android:inputType="date"/>
        <TextView
            android:id="@+id/labelOpis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:textColor="#6e6e6e"
            android:textSize="14sp"
            android:text="@string/labelOpis" />

        <EditText
            android:id="@+id/opis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="5dp"
            android:textSize="16sp" />

        <Button
            android:id="@+id/noviFAlert"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/rounded_button2"
            android:backgroundTint="#004F91"
            android:textColor="@android:color/white"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/labelNovi" />

        <Button
            android:id="@+id/slikati"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/rounded_button2"
            android:backgroundTint="#004F91"
            android:textColor="@android:color/white"
            android:text="@string/labelSlikati" />

        <Button
            android:id="@+id/mijenjanjeFAlert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/rounded_button2"
            android:backgroundTint="#004F91"
            android:textColor="@android:color/white"
            android:text="@string/labelMijenjanje" />

        <Button
            android:id="@+id/obrisiFAlert"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/rounded_button2"
            android:backgroundTint="#ff0000"
            android:text="@string/labelObrisi" />

        <Button
            android:id="@+id/nazad"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/rounded_button"
            android:text="@string/labelNazad"
            android:textColor="@color/colorPrimary"
            app:iconTint="#383838"
            app:strokeColor="@color/colorPrimaryDark" />

        <ImageView
            android:id="@+id/slika"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:contentDescription="@string/labelSlika"
            tools:srcCompat="@tools:sample/avatars" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>